--- a/color/default.css
+++ b/color/default.css
@@ -27,8 +27,8 @@ a:hover {
 
 .form-control:focus {
     border-color: rgb(0, 0, 110);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px #00c1c1;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px #00c1c1;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px rgb(0, 0, 110);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px rgb(0, 0, 110);
 }
 
 .service .carousel-indicators .active {
