Tiddying up everything

--- a/css/style.css
+++ b/css/style.css
@@ -826,14 +826,14 @@ Contact
 
 
 /* ================================
-Clients
+Technologies
 ================================= */
 
-ul.clients {
+ul.technologies {
     list-style: none;
 }
 
-ul.clients li {
+ul.technologies li {
     display: inline;
 }
 
