--- a/color/default.css
+++ b/color/default.css
@@ -1,44 +1,44 @@
 a,
 a:hover {
-    color: #ff9100;
+    color: #ffaf00;
 }
 
 
 /* Back to top button */
 
 .back-to-top {
-    background: rgb(0, 0, 110);
+    background: #00004b;
     color: #fff;
 }
 
 .back-to-top:focus {
-    background: rgb(0, 0, 110);
+    background: #000064;
     color: #fff;
 }
 
 .back-to-top:hover {
-    background: #ff9100;
+    background: #ff9600;
     color: #fff;
 }
 
 .navbar-default {
-    background: rgb(0, 0, 110);
+    background: #00004b;
 }
 
 .form-control:focus {
-    border-color: rgb(0, 0, 110);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px rgb(0, 0, 110);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px rgb(0, 0, 110);
+    border-color: #000064;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px #000064;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 2px #000064;
 }
 
 .service .carousel-indicators .active {
-    background: rgb(0, 0, 110);
+    background: #000064;
 }
 
 .btn-theme {
-    background: rgb(0, 0, 110)0;
+    background: #00004b;
 }
 
 .contact-widget i {
-    color: rgb(0, 0, 110);
+    color: #00004b;
 }
