--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ Parallax
 
 #parallax1 {
     background-image: url(../img/parallax/1.jpg);
-    background-size: contain;
+    /*    background-size: contain; */
     background-repeat: no-repeat;
 }
 
