--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,11 @@ h6 {
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
 h6,
 .h1,
-.h2,
 .h3,
 .h4,
 .h5,
@@ -68,6 +66,10 @@ h6,
     font-weight: 700;
     margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
+}
+
+.h2 {
+    font-family: 'nasa21regular';
 }
 
 .lead {
