--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,8 @@ nav.navbar.fixed-to-top {
     top: 0px;
 }
 
-.navbar-default .navbar-default:hover .navbar-default:active .navbar-default:focus {
+.navbar-default .navbar-default:hover,
+.navbar-default:active .navbar-default:focus {
     color: #fff;
     border: none;
     border-bottom: none;
@@ -890,6 +891,7 @@ footer {
     background: #00004b;
     color: #fff;
     padding: 50px 0 30px;
+    font-family: 'nasa21regular';
 }
 
 footer a {
