Working on new pages

--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ Intro
 }
 
 #intro .carousel-inner .item {
+    margin: 0 auto;
     transition-property: opacity;
     background-position: center top;
 }
