--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,9 @@ Intro
 #intro .carousel-inner .item {
     margin: 0 auto;
     width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
     transition-property: opacity;
     background-position: center top;
 }
