--- a/css/style.css
+++ b/css/style.css
@@ -393,9 +393,8 @@ Intro
 #intro .carousel-inner .item {
     margin: 0 auto;
     width: 100%;
-    height: 100%;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     transition-property: opacity;
     background-position: center top;
 }
