--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,8 @@ Intro
 
 #intro .carousel-inner .item {
     margin: 0 auto;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: block;
     object-fit: contain;
     transition-property: opacity;
