--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,8 @@ Intro
 
 #intro .carousel-inner .item {
     margin: 0 auto;
-    height: 100vh;
-    width: 100vw;
-    display: block;
-    object-fit: contain;
     transition-property: opacity;
-    background-position: center left;
+    background-position: center top;
 }
 
 #intro .carousel-inner .item,
