New template madafaka

--- a/css/style.css
+++ b/css/style.css
@@ -1356,17 +1356,17 @@ figure.blog-item:after {
 }
 
 figure.blog-item:before {
-    background-color: #20638f;
+    background-color: #000064;
     -webkit-transform: skew(-45deg) translateX(-150%);
     transform: skew(-45deg) translateX(-150%);
-    border-right: 1px solid #20638f;
+    border-right: 1px solid #000064;
 }
 
 figure.blog-item:after {
-    background-color: #962d22;
+    background-color: #ffaf00;
     -webkit-transform: skew(-45deg) translateX(-175%);
     transform: skew(-45deg) translateX(-175%);
-    border-right: 1px solid #962d22;
+    border-right: 1px solid #ff9600;
 }
 
 figure.blog-item figcaption {
@@ -1390,18 +1390,18 @@ figure.blog-item figcaption:before {
     content: '';
     background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
-    background-color: #20638f;
+    background-color: #000064;
     -webkit-transform: skew(-45deg) translateX(50%);
     transform: skew(-45deg) translateX(50%);
-    border-right: 1px solid #20638f;
+    border-right: 1px solid #00004b;
 }
 
 figure.blog-item .read-more {
     display: inline-block;
     width: auto;
-    border: 2px solid #20638f;
+    border: 2px solid #00004b;
     padding: 0.4em 0.6em;
-    color: #20638f;
+    color: #000064;
     text-decoration: none;
     font-weight: 800;
     font-size: 0.9em;
@@ -1409,7 +1409,7 @@ figure.blog-item .read-more {
 }
 
 figure.blog-item .read-more:hover {
-    background-color: #20638f;
+    background-color: #000064;
     color: #ffffff;
 }
 
@@ -1510,7 +1510,7 @@ iframe {
 }
 
 .text-blue {
-    color: rgb(0, 171, 201);
+    color: #000064;
 }
 
 .contact-heading {
@@ -1564,7 +1564,7 @@ iframe {
 
 footer {
     padding: 80px 0;
-    background-color: #5cacc1;
+    background-image: linear-gradient(-140deg, #00004b 25%, #000064 775%);
     -webkit-clip-path: polygon(51% 46%, 100% 73%, 100% 100%, 0 100%, 0 70%);
     clip-path: polygon(51% 46%, 100% 73%, 100% 100%, 0 100%, 0 70%);
 }
