--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ table {
 }
 
 .button-style:before {
-    border-color: #ffaf00;
+    border-color: #ff9600;
     border-left-width: 2px;
     border-top-width: 2px;
     left: -5px;
@@ -203,7 +203,7 @@ table {
 
 .button-style:after {
     border-bottom-width: 2px;
-    border-color: #ff9600;
+    border-color: #ffaf00;
     border-right-width: 2px;
     bottom: -5px;
     right: -5px;
@@ -287,7 +287,7 @@ a.navbar-brand {
 
 .navbar-brand {
     font-size: 20px;
-    color: #000 !important;
+    color: #fff !important;
     font-weight: bold;
 }
 
@@ -316,7 +316,7 @@ a.navbar-brand {
 }
 
 .activate-menu {
-    background-image: linear-gradient(-140deg, #00004b 15%, #000064 70%);
+    background-image: linear-gradient(-140deg, #00004b 25%, #000064 75%);
     -webkit-box-shadow: -3px 13px 24px -1px rgba(0, 0, 0, 0.3);
     box-shadow: -3px 13px 24px -1px rgba(0, 0, 0, 0.3);
 }
@@ -450,7 +450,7 @@ nav:before {
 
 #showcase {
     height: 98vh;
-    background-image: linear-gradient(to right bottom, rgba(50, 139, 207, 0.8), rgba(161, 218, 213, 0.8)), url(../img/showcasebg.jpg);
+    background-image: linear-gradient(to right bottom, rgba(0, 0, 75, 0.8), rgba(0, 0, 100, 0.8)), url(../img/showcasebg.jpg);
     background-size: cover;
     background-position: center;
     margin-top: 5.6ems;
