New template madafaka

--- a/css/component.css
+++ b/css/component.css
@@ -34,8 +34,10 @@
 
 .grid figure,
 .grid .placeholder {
-    width: 340px;
-    height: 300px;
+    /*    width: 340px;
+    height: 300px; */
+    width: 250px;
+    height: 220px;
 }
 
 .grid figure {
