--- a/css/component.css
+++ b/css/component.css
@@ -36,6 +36,8 @@
 .grid .placeholder {
     width: 340px;
     height: 300px;
+    -webkit-box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
 }
 
 .grid figure {
