--- a/css/component.css
+++ b/css/component.css
@@ -20,6 +20,8 @@
 }
 
 .grid {
+    -webkit-box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
     position: relative;
     -webkit-transition: all 0.5s cubic-bezier(0, 0, 0.25, 1);
     transition: all 0.5s cubic-bezier(0, 0, 0.25, 1);
