Mudando paleta de cores

--- a/css/style.css
+++ b/css/style.css
@@ -660,7 +660,7 @@ nav:before {
 }
 
 .service_tab_1 {
-    background-color: #ffffff;
+    background-color: #323232;
 }
 
 .service_tab_1:hover .fa-icon-image {
