--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 -----------------------------------------------------------------*/
 
 body {
-    font-size: 15px;
+    font-size: 16px;
 }
 
 h1 {
@@ -80,8 +80,8 @@ a:hover {
 .hover-effect {
     position: relative;
     overflow: hidden;
-    -webkit-box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
-    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.08);
+    -webkit-box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
 }
 
 .hover-effect:hover::after,
@@ -94,7 +94,7 @@ a:hover {
 .hover-effect::before,
 .hover-effect::after {
     content: "";
-    background: #323232;
+    background: #101010;
     height: 0;
     width: 0;
     z-index: 1;
@@ -107,7 +107,7 @@ a:hover {
 .hover-effect::before,
 .hover-effect::after {
     content: "";
-    background: #323232;
+    background: #101010;
     height: 0;
     width: 0;
     z-index: 1;
@@ -162,8 +162,8 @@ table {
 -----------------------------------------------------------------*/
 
 .button-style {
-    background-color: #323232;
-    border: none;
+    background-color: #101010;
+    border: #ddd;
     color: #ffffff;
     cursor: pointer;
     display: inline-block;
@@ -196,7 +196,7 @@ table {
 }
 
 .button-style:before {
-    border-color: #ff9600;
+    border-color: #ddd;
     border-left-width: 2px;
     border-top-width: 2px;
     left: -5px;
@@ -205,7 +205,7 @@ table {
 
 .button-style:after {
     border-bottom-width: 2px;
-    border-color: #ffaf00;
+    border-color: #ddd;
     border-right-width: 2px;
     bottom: -5px;
     right: -5px;
@@ -213,7 +213,7 @@ table {
 
 .button-style:hover,
 .button-style.hover {
-    background-color: #323232;
+    background-color: #101010;
     color: #ffffff;
 }
 
@@ -250,20 +250,20 @@ nav a {
 .navbar-brand {
     font-family: nasa21;
     font-size: 1rem;
-    color: #fff !important;
+    color: #ffffff;
     font-weight: bold;
 }
 
 .navbar-default {
     background-color: transparent;
-    border-color: #e7e7e7;
+    border-color: #ddd;
     padding: 0.6rem;
 }
 
 .navbar-default .navbar-nav>li>a {
     font-size: 0.7rem;
     font-weight: 500;
-    color: #eee;
+    color: #fff;
     letter-spacing: .5px;
     margin-left: .9px;
     -webkit-transition: all .5s;
