Mudando paleta de cores

--- a/css/component.css
+++ b/css/component.css
@@ -160,7 +160,7 @@
     overflow: hidden;
     height: 0;
     opacity: 0;
-    background: #fff;
+    background: #101010;
 }
 
 .content>div.show {
